Fixed Java17 issue